vlib/v/checker/tests/import_mod_sub_duplicate_err.out
vlib/v/checker/tests/import_mod_sub_duplicate_err.vv:3:8: error: cannot import `x.json2` into a module with the same name
    1 | module json2
    2 | 
    3 | import x.json2
      |        ~~~~~~~
    4 | 
    5 | println(json2.Any(json2.null))
vlib/v/checker/tests/import_mod_sub_duplicate_err.vv:3:10: error: cannot import `x.json2` as `json2` into a module with the same name
    1 | module json2
    2 | 
    3 | import x.json2
      |          ~~~~~
    4 | 
    5 | println(json2.Any(json2.null))
vlib/v/checker/tests/import_mod_sub_duplicate_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module json2
      | ^
    2 | 
    3 | import x.json2
