vlib/v/checker/tests/import_mod_sub_duplicate_err.vv
module json2

import x.json2

println(json2.Any(json2.null))
